--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
           <h5>Contact Us</h5>
           <ul>
             <li>Chris Bulley</li>
+            <li>Email: <a href="mailto: crbplf@protonmail.com" target="_blank">crbplf@protonmail.com</a></li>
             <li>CEO: CRBPLF</li>
-            <li><a href="mailto: crbplf@protonmail.com" target="_blank">crbplf@protonmail.com</a></li>
           </ul>
         </div>
       </div>
       <div class="copyright">
-        <p>© Copyright 2023 | CRB | all rights reserved</p>
+        <p>© Copyright 2023 | CRB Consulting | All Rights Reserved</p>
       </div>
     </div>
   </footer>
