--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
       <div class="crb-wrapper">
         <h2 class="comapny-name">CRB</h2>
         <div class="banner-content">
-          <h1>Welcome or CRB Patent Litigation Funding - assisting David in the fight against Goliath.</h1>
+          <span>
+            <h1>Welcome or CRB Patent Litigation Funding - assisting David in the fight against Goliath.</h1>
+          </span>
         </div>
       </div>
     </div>
@@ -23,9 +25,6 @@
   <div class="our-understanding">
     <div class="understanding-wrapper">
       <div class="content">
-        <div class="block">
-          <img src="./images/network.svg" alt="network">
-        </div>
         <h4>CRB is here to provide the capital so that the lawyers can fight and win your patent law suit.  CRB understands (from first hand experience) that patent litigation is both risky and expensive.  We are here to help.</h4>
       </div>
       <div class="image-section"></div>
@@ -42,15 +41,12 @@
   <div class="crb-discussion">
     <div class="discussion-img"></div>
     <div class="content-discussion">
-      <div class="block">
-        <img src="./images/discussion.svg" alt="discussion">
-      </div>
       <h4>CRB will then have a discussion with the lawyers and arrange a fee schedule that is agreeable to all parties.</h4>
       <h4>The last step is for you (the Plaintiff) and CRB to agree that any financial settlement or decision is split 50-50 after expenses. When we all agree to the terms, CRB will fully fund your litigation.</h4>
     </div>
   </div>
   <!-- clocks -->
-  <div class="clocks-wrapper">
+  <!-- <div class="clocks-wrapper">
     <div class="crb-wrapper">
       <div class="toronto single-clock">
         <h6>toronto</h6>
@@ -73,7 +69,7 @@
         <div id="MyClockDisplay" class="clock" onload="showTime()">08:00:00</div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- footer -->
   <footer>
     <div class="crb-wrapper footer-content">
